# ai-agent

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  init_gcloud.sh  pyproject.toml  servers_config.json
client/: agent.py  helper.py  main.py  multi_agent.py  server.py  servers_config.json  supervisor.py  tool.py  tool_agent.py  tool_knowledge.py
client/configuration/: configuration.py
servers/: email.py  search.py  website_browsing.py
src/: main.py
src/authentication/: auth.py
src/client/assistant/: agent.py  planning.py
src/client/configuration/: configuration.py  servers_config.json
src/client/llm_compiler/: agent.py  classifier_graph.py  executor.py  graph.py  joiner.py  llm_compiler.py  output_parser.py  plan_and_execute_graph.py  planner.py  postprocess_graph.py  state.py
src/client/persistence/: init_db.py
src/client/persistence/db/: database.py
src/client/persistence/models/: thread.py  user.py
src/servers/: emailing.py  search.py  website_browsing.py
test/: test_extract_json.py
